--- a/public/assets/styles/welcome.css
+++ b/public/assets/styles/welcome.css
@@ -33,6 +33,7 @@
     position: absolute;
 }
 .landingpage-medium-primary {
+    color: white;
     top: 35px;
     right: 217px;
     width: 140px;
@@ -44,7 +45,7 @@
     flex-shrink: 0;
     border-radius: 6px;
     justify-content: center;
-    background-color: rgba(200, 200, 200, 1);
+    background-color: rgba(38, 49, 65, 0.836);
 }
 .landingpage-text {
     color: var(--dl-color-dark-dark1);
@@ -59,12 +60,13 @@
     text-decoration: none;
 }
 .landingpage-medium-primary:hover {
-    color: rgb(255, 255, 255);
+    background-color: rgb(194, 65, 12);
 }
 .landingpage-medium-primary1:hover {
-    color: rgb(255, 255, 255);
+    background-color: rgb(194, 65, 12);
 }
 .landingpage-medium-primary1 {
+    color: white;
     top: 35px;
     right: 38px;
     width: 142px;
@@ -75,7 +77,7 @@
     align-items: center;
     border-radius: 6px;
     justify-content: center;
-    background-color: rgba(200, 200, 200, 1);
+    background-color: rgba(38, 49, 65, 0.836);
 }
 .landingpage-text02 {
     color: var(--dl-color-light-light1);
